Fixes #1485: Update twitter id of Loklak

--- a/html/index.html
+++ b/html/index.html
@@ -199,8 +199,8 @@
             Get latest news about <a href="http://loklak.org/search?query=%23loklak"
                                            target="_blank"><code>loklak</code></a>
             and follow
-            <a href="https://twitter.com/intent/follow?screen_name=lklknt" target="_blank">
-                <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @lklknt</button></a>,
+            <a href="https://twitter.com/intent/follow?screen_name=loklak_" target="_blank">
+                <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @loklak_</button></a>,
             <a href="https://twitter.com/intent/follow?screen_name=fossasia" target="_blank">
                 <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @fossasia</button></a>
             and the project founders
