Fix #1466: Make header consistent with apps.loklak.org

--- a/html/index.html
+++ b/html/index.html
@@ -32,19 +32,17 @@
         "logo": "http://loklak.org/artwork/loklak_org_sticker.png",
         "sameAs": [
           "https://twitter.com/loklak_app",
-          "https://twitter.com/lklknt",
-          "https://www.facebook.com/loklakmessages/",
+          "https://twitter.com/loklak_",
+          "https://www.facebook.com/loklak.org/",
           "https://www.youtube.com/channel/UCzlERcAMNubMu6Q6OujAPbg",
-          "https://loklaknet.wordpress.com/"
+          "https://blog.loklak.org/"
         ],
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "http://loklak.org/api/search.json?q={query}",
+          "target": "http://api.loklak.org/api/search.json?q={query}",
           "query-input": "required name=query"
         }
       }
-
-
     </script>
     <!--#include file="../ssi/common_head_back.include" -->
     <!--#include file="../data/ssi/custom_head.include" -->
@@ -181,7 +179,7 @@
             <div class="col-md-3">
                 <h2>Open Source</h2>
                 <p>This is <a href="https://www.gnu.org/licenses/old-licenses/lgpl-2.1">LGPL</a>ed, <a
-                        href="http://fsfe.org/about/basics/freesoftware.html">free software</a> using <a
+                        href="https://en.wikipedia.org/wiki/Open-source_software">Open Source software</a> using <a
                         href="http://eclipse.org/jetty/">Jetty</a> and <a href="http://www.elasticsearch.org/">Elasticsearch</a>.
                     <a href="http://www.elasticsearch.org/overview/kibana/">Kibana</a> can easily be added.<br/><br/>Clone
                     the Git Repo:</p>
@@ -202,7 +200,9 @@
             <a href="https://twitter.com/intent/follow?screen_name=loklak_" target="_blank">
                 <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @loklak_</button></a>,
             <a href="https://twitter.com/intent/follow?screen_name=fossasia" target="_blank">
-                <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @fossasia</button></a>
+                <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @fossasia</button></a>,
+            <a href="https://www.facebook.com/loklak.org/" target="_blank">
+                <button class="btn btn-twitter btn-xs"><i class="fa fa-facebook" aria-hidden="true"></i> @loklak.org</button></a>,
             and the project founders
             <a href="https://twitter.com/intent/follow?screen_name=0rb1t3r" target="_blank">
                 <button class="btn btn-twitter btn-xs"><i class="fa fa-twitter" aria-hidden="true"></i> @0rb1t3r</button></a>
