Added link to privacy page of loklak in footer

--- a/html/index.html
+++ b/html/index.html
@@ -231,6 +231,7 @@
         <a href="https://github.com/loklak/loklak_server"> Code </a>
     </div>
     <div class="right links">
+    	<a href="http://loklak.org/privacy"> Privacy </a>
         <a href="http://loklak.org/terms"> Terms </a>
         <a href="http://loklak.org/contact"> Contact </a>
     </div>
